fix input text align

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,7 @@
   user-select: text;
   font-family: sans-serif;
   padding: 9px 12px 11px;
+  text-align: left;
 }
 
 
